Added advertising statements

--- a/index.html
+++ b/index.html
@@ -75,15 +75,52 @@
       </section>
 
       <!-- Advertising -->
-      <section>
-        <h2>Advertising and monetization</h2>
-        <p>
-            GeoBingo does not display ads and does not offer in-app purchases.
-        </p>
-        <p>
-            The app does not collect advertising identifiers or monetization-related data.
-        </p>
-    </section>
+      <!-- Advertising -->
+<section>
+  <h2>Advertising and monetization</h2>
+
+  <p>
+    GeoBingo may display advertisements in the mobile app to support development
+    and keep the app free to use.
+  </p>
+
+  <p>
+    We use third-party advertising providers (such as Google AdMob) to serve ads.
+    These providers may automatically collect and process certain information
+    for purposes such as delivering ads, measuring performance, preventing fraud,
+    and improving ad relevance.
+  </p>
+
+  <p>
+    This may include:
+  </p>
+
+  <ul>
+    <li>Device information (model, OS version, language)</li>
+    <li>IP address (used to estimate general location)</li>
+    <li>Advertising identifiers (such as the Android Advertising ID or iOS IDFA if permitted)</li>
+    <li>App usage data (such as ad impressions, clicks, and interaction)</li>
+    <li>Diagnostics and crash data</li>
+  </ul>
+
+  <p>
+    Depending on your region, ads may be personalized or non-personalized.
+    If you are located in the European Economic Area (EEA), the United Kingdom,
+    or Switzerland, we may request your consent before showing personalized ads.
+  </p>
+
+  <p>
+    You can change your advertising consent at any time by adjusting your device
+    privacy settings, resetting your advertising ID, or using in-app consent
+    options if available.
+  </p>
+
+  <p>
+    <strong>We do not sell your personal data.</strong>
+    However, advertising partners may process data according to their own privacy policies.
+  </p>
+</section>
+
       <!-- Data retention -->
       <section>
         <h2>Data retention</h2>
@@ -182,3 +219,4 @@
   </main>
 </body>
 </html>
+
