--- a/index.html
+++ b/index.html
@@ -14,143 +14,104 @@
   <main class="page">
     <article class="card">
       <h1>GeoBingo Privacy Policy</h1>
-      <p class="updated">Last updated: December 16, 2025</p>
+      <p class="updated">Last updated: February 19, 2026</p>
 
       <p>
         GeoBingo helps you explore the world through engaging geography challenges.
         This policy explains how we collect, use, share, and protect your information
-        when you use our services, including the GeoBingo mobile and web apps
-        (collectively, the “Services”).
+        when you use our services, including the GeoBingo mobile and web apps, accounts,
+        saved progress, email communications, and any related offerings (collectively,
+        the "Services").
       </p>
 
       <!-- Information we collect -->
       <section>
         <h2>Information we collect</h2>
         <p>
-          You may use GeoBingo without creating an account. If you choose to create
-          an account, we may collect the following information:
+          We collect information that you provide to us directly and information that
+          is generated when you use the Services.
         </p>
         <ul>
-          <li>Name (from Google or Facebook login)</li>
-          <li>Email address</li>
-          <li>Authentication identifiers</li>
-          <li>App progress, rewards, and usage data</li>
+          <li>Account details such as your username, display name, email address, and password (stored in encrypted form).</li>
+          <li>Gameplay data, including lesson progress, streaks, leaderboards, and earned rewards.</li>
+          <li>Saved preferences like language, theme, sound selections, and profile customization choices stored on your device or in the cloud.</li>
+          <li>Support requests and content you share with us when you contact customer care or participate in community features.</li>
+          <li>Approximate device and usage data such as app version, device type, and interaction events that help us improve app stability and performance.</li>
+          <li>Advertising identifiers such as your mobile advertising ID (AAID/IDFA) and related device identifiers used for ad delivery and measurement.</li>
+          <li>Ad interaction data such as ad impressions, clicks, and reward events.</li>
         </ul>
       </section>
 
-      <!-- How we use data -->
+      <!-- How we use information -->
       <section>
-        <h2>How we use your data</h2>
-        <p>We use your data to:</p>
+        <h2>How we use information</h2>
+        <p>We use your information to deliver delightful geography-learning experiences and to operate essential business functions.</p>
         <ul>
-          <li>Create and manage your account</li>
-          <li>Save progress, streaks, and rewards</li>
-          <li>Provide core app functionality</li>
+          <li>Create and manage your GeoBingo account, sync your progress across devices, and authenticate your access.</li>
+          <li>Provide personalized lessons, quizzes, and recommendations based on your saved progress and preferences.</li>
+          <li>Send important service messages, password resets, or account alerts.</li>
+          <li>Serve and measure ads, including limiting ad frequency and preventing abuse.</li>
+          <li>Monitor performance, prevent fraud or abuse, and improve the stability and accessibility of the Services.</li>
         </ul>
-        <p><strong>We do not sell personal data.</strong></p>
       </section>
 
-      <!-- Third-party services -->
+      <!-- When we share information -->
       <section>
-        <h2>Third-party services</h2>
-        <p>
-          GeoBingo uses third-party authentication providers:
-        </p>
+        <h2>When we share information</h2>
+        <p>We do not sell your personal data. We only share information in the following circumstances:</p>
         <ul>
-          <li>Google Sign-In</li>
-          <li>Facebook Login</li>
+          <li>With service providers that support core operations such as authentication, cloud hosting, analytics, customer support, and email delivery.</li>
+          <li>With advertising partners and ad networks (for example, Google AdMob) to serve and measure ads.</li>
+          <li>To comply with legal obligations, protect rights and safety, or respond to lawful requests from public authorities.</li>
         </ul>
-        <p>
-          These services process your data according to their own privacy policies.
-        </p>
       </section>
-
-      <!-- Cookies / analytics -->
-      <section>
-        <h2>Cookies, local storage, and analytics</h2>
-        <p>
-          We use local storage and similar technologies to remember preferences,
-          maintain session security, and improve app performance.
-        </p>
-      </section>
-
-      <!-- Advertising -->
-      <!-- Advertising -->
-<section>
-  <h2>Advertising and monetization</h2>
-
-  <p>
-    GeoBingo may display advertisements in the mobile app to support development
-    and keep the app free to use.
-  </p>
-
-  <p>
-    We use third-party advertising providers (such as Google AdMob) to serve ads.
-    These providers may automatically collect and process certain information
-    for purposes such as delivering ads, measuring performance, preventing fraud,
-    and improving ad relevance.
-  </p>
-
-  <p>
-    This may include:
-  </p>
-
-  <ul>
-    <li>Device information (model, OS version, language)</li>
-    <li>IP address (used to estimate general location)</li>
-    <li>Advertising identifiers (such as the Android Advertising ID or iOS IDFA if permitted)</li>
-    <li>App usage data (such as ad impressions, clicks, and interaction)</li>
-    <li>Diagnostics and crash data</li>
-  </ul>
-
-  <p>
-    Depending on your region, ads may be personalized or non-personalized.
-    If you are located in the European Economic Area (EEA), the United Kingdom,
-    or Switzerland, we may request your consent before showing personalized ads.
-  </p>
-
-  <p>
-    You can change your advertising consent at any time by adjusting your device
-    privacy settings, resetting your advertising ID, or using in-app consent
-    options if available.
-  </p>
-
-  <p>
-    <strong>We do not sell your personal data.</strong>
-    However, advertising partners may process data according to their own privacy policies.
-  </p>
-</section>
 
       <!-- Data retention -->
       <section>
-        <h2>Data retention</h2>
+        <h2>Data memory</h2>
         <p>
-          Account data is retained until you request deletion. Backup data may be
-          retained for up to 30 days for security and legal purposes.
+          We retain your account and gameplay information for as long as your GeoBingo
+          account is active. If you delete your account or request erasure, we will
+          remove or anonymize your personal data within a reasonable period unless we
+          need to keep it for legal, regulatory, or security reasons.
         </p>
       </section>
 
-      <!-- Account deletion -->
+      <!-- Controls -->
       <section>
-        <h2>Account deletion</h2>
+        <h2>Your choices and controls</h2>
         <p>
-          You may request deletion of your account and associated data using the
-          following form:
+          You can access, update, or delete many aspects of your data directly in the
+          Account screen. Additional options include:
         </p>
-        <p>
-          <a href="https://forms.gle/1RzuHgT5BCPF1Ci26" target="_blank">
-            Account Deletion Request Form
-          </a>
-        </p>
+        <ul>
+          <li>Updating your email address, display name, and password from the Account screen.</li>
+          <li>Adjusting notification and email preferences or opting out of marketing communications via the links provided in our emails.</li>
+          <li>Controlling ad personalization and tracking in your device settings (iOS App Tracking Transparency, Android Ads settings).</li>
+          <li>Requesting account deletion, data export, or privacy assistance by contacting us at ward.vereecken@hotmail.be.</li>
+        </ul>
       </section>
 
       <!-- Children -->
       <section>
-        <h2>Children’s privacy</h2>
+        <h2>Children's privacy</h2>
         <p>
-          GeoBingo is not directed at children under the age of 9. If you believe
-          that a child has provided personal data, please contact us so we can
-          remove it promptly.
+          GeoBingo is designed for a general audience and is not intended for children
+          under the age where parental consent is required in your region. We do not
+          knowingly collect personal information from children without appropriate consent.
+          If you believe a child has provided us with personal information, please contact
+          us so we can take appropriate action.
+        </p>
+      </section>
+
+      <!-- International transfers -->
+      <section>
+        <h2>International data transfers</h2>
+        <p>
+          We may process and store information on servers located in different countries.
+          We maintain safeguards to ensure that international transfers comply with
+          applicable data protection laws and that your information remains protected
+          regardless of where it is processed.
         </p>
       </section>
 
@@ -158,65 +119,35 @@
       <section>
         <h2>Security</h2>
         <p>
-          We use reasonable administrative and technical safeguards to protect your
-          information. No system is completely secure, so we encourage strong
-          passwords and responsible account use.
+          We implement administrative, technical, and physical safeguards to protect your
+          data, including encryption in transit, restricted access controls, and ongoing
+          monitoring. No system is completely secure, so we encourage you to use strong
+          passwords and keep your login information confidential.
         </p>
       </section>
-
-      <section>
-  <h2>Legal basis for processing</h2>
-  <p>
-    We process personal data only when necessary to provide the Services,
-    fulfill a user request (such as account creation), comply with legal
-    obligations, or with your consent where required.
-  </p>
-</section>
-
-<section>
-  <h2>International data transfers</h2>
-  <p>
-    Some of our service providers may process data on servers located outside
-    your country. We take reasonable steps to ensure that appropriate safeguards
-    are in place to protect your information in accordance with applicable laws.
-  </p>
-</section>
-
 
       <!-- Changes -->
       <section>
         <h2>Changes to this policy</h2>
         <p>
-          We may update this policy from time to time. Updates will be reflected on
-          this page with a revised “Last updated” date.
+          We may update this Privacy Policy to reflect new features, legal requirements,
+          or feedback. We will post the revised policy in the app and update the "Last
+          updated" date. Significant changes may also be communicated via in-app messages
+          or email.
         </p>
       </section>
 
-      <section>
-        <h2>Your rights</h2>
-        <p>
-            Depending on your location, you may have the right to access, correct, or
-            delete your personal data, restrict or object to certain processing, and
-            request a copy of your data.
-        </p>
-        <p>
-            You can exercise these rights by contacting us using the details below.
-            We may need to verify your identity before fulfilling certain requests.
-        </p>
-        </section>
-
       <!-- Contact -->
       <section>
-        <h2>Contact</h2>
+        <h2>Contact us</h2>
         <p>
-          If you have questions about this Privacy Policy, please contact:
-        </p>
-        <p>
-          <strong>ward.vereecken@hotmail.be</strong>
+          If you have questions, requests, or concerns about this Privacy Policy or
+          GeoBingo's data practices, please contact us at ward.vereecken@hotmail.be.
+          We aim to respond promptly and resolve issues in line with applicable data
+          protection regulations.
         </p>
       </section>
     </article>
   </main>
 </body>
 </html>
-
